examples/test/testpolicy15515.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15515
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key23: value19
      key14: value36
      key34: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value23
          key32: value23
      podSelector:
        matchLabels:
          key15: value37
          key17: value28
          key44: value5
